--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,10 +1,45 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx
+  name: api-gateway
 spec:
-  containers:
-  - name: nginxtest
-    image: nginx:1.14.2
-    ports:
-    - containerPort: 80
+  selector:
+    matchLabels:
+      app: api-gateway
+  replicas: 1
+  template: # template for the pods
+    metadata:
+      labels:
+        app: api-gateway
+    spec:
+      containers:
+      - name: api-gateway
+        image: ${REPOSITORY_TAG}
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: production-microservice
+        # Using this as a way to avoid having to bother pushing images to registry.
+        imagePullPolicy: Never
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: fleetman-api-gateway
+
+spec:
+  # This defines which pods are going to be represented by this Service
+  # The service becomes a network endpoint for either other services
+  # or maybe external users to connect to (eg browser)
+  selector:
+    app: api-gateway
+
+  ports:
+    - name: http
+      port: 8080
+      nodePort: 30020
+
+  type: NodePort
